<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.saxion.ap.drawtalk.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/topic"
        android:textSize="24sp"
        android:id="@+id/tvDescription"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDescription"
        android:textSize="14sp"
        android:gravity="top"
        android:hint="@string/topicHint"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:text="@string/amountParts"
        android:textSize="14sp"
        android:id="@+id/tvAmountParts"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/llAmountParts"
    android:layout_below="@id/tvAmountParts"
    android:orientation="horizontal"
    android:weightSum="100">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="0"
        android:textSize="14sp"
        android:id="@+id/tvSeekStart"/>
    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:id="@+id/sbAmountParts"
        android:max="4"
        android:progress="4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="4"
        android:textSize="14sp"
        android:id="@+id/tvSeekEnd"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llAmountParts"
        android:orientation="vertical"
        android:id="@+id/rlPie">

        <nl.saxion.ap.drawtalk.view.PieView
            android:id="@+id/pvPie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="80"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_gravity="top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Part:"
                android:textSize="24sp"
                android:layout_weight="15"
                android:id="@+id/tvPart" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:id="@+id/etPart"
                android:textSize="14sp"
                android:layout_gravity="bottom"
                android:hint="@string/hintPart" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAdd"
                android:textSize="14sp"
                android:layout_weight="20"
                android:id="@+id/btnAdd" />
        </LinearLayout>



    </LinearLayout>




</RelativeLayout>
